--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "17.0.1",
     "react-native": "0.64.0",
     "react-native-animatable": "^1.3.3",
+    "react-native-flash-message": "^0.1.23",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-localization": "^2.1.7",
     "react-native-pager-view": "^5.1.7",
